<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBp7xQlcrHSK61tVE4SC4oOli0YR1IbJF8</string>

    <string name="app_name">KeeFree</string>

    <string name="ok"><b><i>OK</i></b></string>
    <string name="cancel">CANCEL</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>

    <string name="change_pin_code">Change pin code</string>
    <string name="clear_pin_code">Clear pin code</string>
    <string name="wrong_pin_warning_message">Sorry, wrong pin record, please try again.</string>
    <string name="request_pin_message">Please enter your pin record</string>

    <string name="bottom_nav_title_keefree">KEEFREE</string>
    <string name="bottom_nav_title_location">Location</string>
    <string name="bottom_nav_title_activity">Activity</string>
    <string name="bottom_nav_title_settings">Setting</string>

    <string name="actionbar_title_keefree">KEEFREE</string>
    <string name="actionbar_title_location">LOCATION</string>
    <string name="actionbar_title_activity">ACTIVITY</string>
    <string name="actionbar_title_settings">SETTINGS</string>

    <string name="how_to_unlock_and_lock_message">
        <![CDATA[To unlock your KEEFREE smart bike lock\n
        press and hold on the lock icon.]]>
    </string>

    <string name="enter_previous_passcode_prompt">Enter previous pin code</string>
    <string name="clear_prompt">Clear</string>
    <string name="confirm_prompt">Confirm</string>
    <string name="successful_pin_code_prompt">SUCCESS! Please enter NEW pin code.</string>
    <string name="reenter_pin_code_prompt">RE-ENTER pin code. Press \"Confirm\" to finalise.</string>
    <string name="successful_pin_code_change_prompt">
        PIN CODE HAS BEEN SUCCESSFULLY CHANGED\nTo change again: Enter previous pin code.
    </string>
    <string name="try_again_prompt">Try again. Please enter NEW pin code.</string>

    <string name="pref_key_is_first_time_user">is_first_time_user</string>
    <string name="pref_is_first_time_user_false">false</string>
    <string name="pref_is_first_time_user_true">true</string>

    <string name="pref_key_pin_code">pin_code</string>
    <string name="pref_default_pin_code">1234</string>
    <string name="pref_title_pin_code">App Code</string>
    <string name="pref_summary_pin_code">When accessing your KEEFREE mobile application.</string>

    <string name="pref_key_phoneless_pin_code">phoneless_pin_code</string>
    <string name="pref_default_phoneless_pin_code">1234</string>
    <string name="pref_title_phoneless_access_code">Phone-less Access Code</string>
    <string name="pref_summary_phoneless_access_code">Accessing physical KEEFREE smart bike lock when your phone is not present.</string>

    <string name="pref_key_credit">credit</string>
    <string name="pref_title_credit">Credit</string>
    <string name="pref_summmary_credit">Development information, attributes and credit to authors.</string>

    <string name="ble_connected">CONNECTED</string>
    <string name="ble_not_connected">NOT CONNECTED</string>
    <string name="ble_not_supported_title">Bluetooth LE not supported!</string>
    <string name="ble_not_supported_body">Unfortunately, your device does not support bluetooth low energy (LE).KEEFREE smart bike lock uses bluetooth LE in order to connect.\n\nThis application will now exit…</string>
    <string name="ble_scan_failed_title">Scanning Error</string>
    <string name="ble_scan_failed_body">Unable to scan. Please try again later.</string>
    <string name="ble_no_devices_found_title">Cannot find your device</string>
    <string name="ble_no_devices_found_body">Please check if your KEEFREE is turn on and that your in range.</string>

    <string name="security_off">SECURITY OFF</string>
    <string name="security_off_title">Turn Security Off</string>
    <string name="security_off_body">Are you sure you want to turn security off?\nIt will remove theft detection, SMS notification, alarm, etc.</string>
    <string name="security_on">SECURITY ON</string>

    <string name="permission_location_title">Location Permission</string>
    <string name="permission_location_body">In order to connect your KEEFREE smart bike lock, location permissions is required.</string>
    <string name="ble_devices_title">Found Devices</string>
    <string name="ble_devices_sub_title">Connect to your KEEFREE smart bike lock!</string>
    <string name="loading_please_wait">Please wait…</string>
    <string name="popup_disconnect">Disconnect</string>
    <string name="go_to_google_maps_text">Get Directions</string>
    <string name="connect_to_keefree_title">Connect to KEEFREE</string>
    <string name="connect_to_keefree_body">Please connect to your KEEFREE smart bike first.</string>
    <string name="timed_out_title">Timed Out...</string>
    <string name="timed_out_body">Did not receive successful message from your KEEFREE. May need to try again.</string>
    <string name="unlocking_loading_dialog_text">Unlocking for 5 seconds...</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="action_settings">Settings</string>\

    <string name="onboarding_skip_text">Skip</string>
    <string name="onboarding_next_text">Next</string>
    <string name="onboarding_finish_text">Finish</string>
    <string name="onboarding_connect_title">CONNECT</string>
    <string name="onboarding_connect_body">Connect to your personal KEEFREE smart bike lock by clicking on the linking icon. Located on top-left of keefree section.</string>
    <string name="onboarding_security_title">SECURITY</string>
    <string name="onboarding_track_title">TRACK</string>
    <string name="onboarding_security_body">Turn security on when you have connected. This activates theft detection, alarms and notifications.</string>
    <string name="onboarding_track_body">Track the location of your KEEFREE smart bike lock! Open Google maps to direct yourself in case you forget!</string>
    <string name="turn_buzzer_off">TURN BUZZER OFF</string>


</resources>
