<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:key="@string/pref_key_pin_code"
        android:defaultValue="@string/pref_default_pin_code"
        android:title="@string/pref_title_pin_code"
        android:summary="@string/pref_summary_pin_code"
        android:fragment="com.paulodacaya.keefree.ui.fragments.ChangePinFragment" >
    </PreferenceScreen>

    <!-- TODO: Smart Implementation -->
    <PreferenceScreen
        android:key="@string/pref_key_phoneless_pin_code"
        android:defaultValue="@string/pref_default_phoneless_pin_code"
        android:title="@string/pref_title_phoneless_access_code"
        android:summary="@string/pref_summary_phoneless_access_code" >

    </PreferenceScreen>

    <PreferenceScreen
        android:key="@string/pref_key_credit"
        android:title="@string/pref_title_credit"
        android:summary="@string/pref_summmary_credit" >

    </PreferenceScreen>

</PreferenceScreen>