<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_navigation_keefree"
        android:icon="@drawable/ic_keefree_logo_bw"
        android:title="@string/bottom_nav_title_keefree" />

    <item
        android:id="@+id/bottom_navigation_location"
        android:icon="@drawable/ic_map_marker"
        android:title="@string/bottom_nav_title_location" />

    <item
        android:id="@+id/bottom_navigation_activity"
        android:icon="@drawable/ic_bell"
        android:title="@string/bottom_nav_title_activity" />

    <item
        android:id="@+id/bottom_navigation_settings"
        android:icon="@drawable/ic_settings_cog"
        android:title="@string/bottom_nav_title_settings" />

</menu>
