<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChangePinActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/promptLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/enter_previous_passcode_prompt"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <LinearLayout
        android:id="@+id/changePinCodeContainer"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promptLabel">

        <EditText
            android:id="@+id/changePinCode1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:text="0" />

        <EditText
            android:id="@+id/changePinCode2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:text="0" />

        <EditText
            android:id="@+id/changePinCode3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:text="0" />

        <EditText
            android:id="@+id/changePinCode4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:inputType="numberSigned"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:text="0" />
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/leftThirdGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <android.support.constraint.Guideline
        android:id="@+id/rightThirdGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/colorWarningRed"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/clear_prompt"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/leftThirdGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftThirdGuideline"
        app:layout_constraintTop_toBottomOf="@+id/changePinCodeContainer" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alpha="0.1"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/alegreya_sans_bold"
        android:text="@string/confirm_prompt"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/rightThirdGuideline"
        app:layout_constraintStart_toStartOf="@+id/rightThirdGuideline"
        app:layout_constraintTop_toBottomOf="@+id/changePinCodeContainer" />

</android.support.constraint.ConstraintLayout>